--- a/miniprogram-7/deploy/docker-compose.yml
+++ b/miniprogram-7/deploy/docker-compose.yml
@@ -52,7 +52,7 @@ services:
       WECHAT_APP_SECRET: ${WECHAT_APP_SECRET:-}
       LLM_API_KEY: ${LLM_API_KEY:-}
       LLM_BASE_URL: ${LLM_BASE_URL:-}
-      SEMANTIC_SCHOLAR_API_KEY: ${SEMANTIC_SCHOLAR_API_KEY:-}
+      OPENALEX_API_KEY: ${OPENALEX_API_KEY:-}
       DEFAULT_FEED_KEYWORDS: ${DEFAULT_FEED_KEYWORDS:-large language model, retrieval augmented generation, computer vision}
     depends_on:
       postgres:
