--- a/miniprogram-7/miniprogram/app.json
+++ b/miniprogram-7/miniprogram/app.json
@@ -4,6 +4,9 @@
     "pages/register/register",
     "pages/wx_profile_setup/index",
     "pages/lab/index",
+    "pages/AcademicPls/index",
+    "pages/DataViz/index",
+    "pages/Citations/index",
     "pages/review_simulator/index",
     "pages/explore/index",
     "pages/explore_Card/index",
